--- a/templates/add.html
+++ b/templates/add.html
@@ -17,20 +17,26 @@
     </div>
     <p style="color: aliceblue;">Hi, {{ fname }} </p>
 
-    <form action="{{ url_for('add') }}" method="POST" id="form3">
+    <form action="{{ url_for('add') }}" method="POST" id="form3" style="color: aliceblue;">
 
         <label for="textbox1">Store/Company Name:</label>
         {{ add_form.store }}
+        <br><br>
         <label for="textbox2">Coupon Code:</label>
         {{ add_form.code }}
+        <br><br>
         <label for="textbox3">Valid Upto:</label>
-        {{ add_form.valid_upto }}
+        {{ add_form.valid_upto(placeholder="2020-07-27") }}
+        <br><br>
         <label for="textbox4">Added By:</label>
         {{ add_form.added_by }}
+        <br><br>
         <label for="textbox5">Valid For:</label>
-        {{ add_form.valid_for }}
+        {{ add_form.valid_for }} Use ctrl to select multiple
+        <br><br>
         <label for="textbox6">Additional Details:</label>
         {{ add_form.additional }}
+        <br><br>
 
         {{add_form.sub}}
     </form>
