Added Point System

--- a/templates/add.html
+++ b/templates/add.html
@@ -16,6 +16,7 @@
         {% endif %}
     </div>
     <p style="color: aliceblue;">Hi, {{ fname }} </p>
+    <p style="color: aliceblue;"> Coupon Redemptions Remaining: {{ Coupon_Redemptions }} </p>
 
     <form action="{{ url_for('add') }}" method="POST" id="form3" style="color: aliceblue;">
 
