--- a/templates/about.html
+++ b/templates/about.html
@@ -16,5 +16,6 @@
         {% endif %}
     </div>
     <p style="color: aliceblue;">Hi, {{ fname }} </p>
+    <p style="color: aliceblue;"> Coupon Redemptions Remaining: {{ Coupon_Redemptions }} </p>
 </body>
 </html>
