--- a/templates/add.html
+++ b/templates/add.html
@@ -9,7 +9,7 @@
         <a href="/home">CouponShare</a>
         <a class="active" href="/add">Add Coupon</a>
         <a href="/about">About</a>
-        {% if logged_in == 1 %}
+        {% if 'email' in session %}
             <a href="/logout">Log Out</a>
         {% else %}
             <a href="/login">Log in</a>
