--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
             Store/Company : {{ code.Store }} <br>
             Added By : {{ code.Added_By }} <br>
             Code : {{ code.Code }} <br>
+            Added On : {{ code.Added_On }} <br>
             Valid Upto : {{ code.Valid_Upto }} <br>
             Categories Applicable : {% for Categories in code.Valid_For %} 
                                     {{ Categories }},
