--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,10 +1,91 @@
 <html>
-    <head>
-        <title>Coupon Share</title>
-    </head>
-    <body>
-        Landing page
-        <a href="{{url_for('login')}}"><button>Login</button></a>
-        <a href="{{url_for('signup')}}"><button>signup</button></a>
-    </body>
+<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+<style>
+    body {
+        background-image: linear-gradient(to bottom right, black, black, rgb(12, 5, 66), #BB86FC);
+        font-family: Roboto;
+        color: white;
+        line-height: 1.5;
+        width: 100%;
+
+    }
+
+    .header {
+        overflow: hidden;
+        background: transparent;
+        padding: 20px 10px;
+    }
+
+    .header a {
+        float: left;
+        color: white;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+        padding-right: 40px;
+    }
+
+    .header a.logo {
+        font-size: 35px;
+
+        letter-spacing: 2px;
+    }
+
+    .header .active {
+        text-decoration: line-through;
+    }
+
+    .header-right {
+        float: right;
+    }
+
+    @media screen and (max-width: 500px) {
+        .header a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+
+        .header-right {
+            float: none;
+        }
+    }
+
+    #content {
+        padding-left: 50px;
+    }
+
+    #content a {
+        text-decoration: underline;
+        text-underline-position: under;
+        font-size: 18px;
+        color: #BB86FC;
+    }
+</style>
+
+<body>
+    <div class="header">
+        <a href="#home">HOME</a>
+        <a href="/login">LOGIN</a>
+        <a href="/signup">SIGNUP</a>
+        <a href="#about">ABOUT US</a>
+        <a href="#faq">FAQ</a>
+    </div><br><br><br>
+
+    <div id="content" width="25%">
+        <p style="font-size: 72px; letter-spacing: 5px;"><b>CouponShare</b><br></p>
+        <!-- <p style="font-size: 30px;">LOREM IPSUM</p><br> -->
+        <p width="25%">
+            A website for people to share the details of coupons of websites and stores that they wont be using.<br>
+            Uses a basic point based system. Each coupon added awards +1 point and each redemption awards -1 point.<br>
+            Keep Adding coupons to redeem and avail discounts! <br><br>
+            Made with ❤️ by Rushil Goel <br>
+        </p><br>
+    </div><br><br>
+
+</body>
+
 </html>
