--- a/templates/landing.html
+++ b/templates/landing.html
@@ -80,6 +80,9 @@ li {
   background-color: #BB86FC;
   font-family: "Quicksand", sans-serif;
 }
+footer {
+    text-align: center;
+}
 </style>
 
 <body>
@@ -108,31 +111,24 @@ li {
           </a>
         </div>
     </nav>
-    <!-- <div class="header">
-        <a href="#home">HOME</a>
-        <a href="/login">LOGIN</a>
-        <a href="/signup">SIGNUP</a>
-        <a href="#about">ABOUT US</a>
-        <a href="#faq">FAQ</a>
-    </div><br><br><br> -->
 
+    <div class="container">
     <div id="row">
-        <div id="col1">
+        <div id="col-xl-8">
             <p style="font-size: 72px; letter-spacing: 5px;"><b>CouponShare</b><br></p>
             <p width="25%">
-                A website for people to share the details of coupons of websites and stores that they wont be using.<br>
-                Uses a basic point based system. Each coupon added awards +1 point and each redemption awards -1 point.<br>
-                Keep Adding coupons to redeem and avail discounts! <br><br>
-                Made with ❤️ by Rushil Goel <br>
+                A website for people to share the details of coupons of websites and stores that they wont be using.
+                Uses a basic point based system. Each coupon added awards +1 point and each redemption awards -1 point.
+                Keep Adding coupons to redeem and avail discounts!
             </p><br>
         </div>
-
-        <div id="col2">
-            <img src="https://burgerbaeclothing.com/wp-content/plugins/woocommerce-smart-coupons/assets/images/discount-coupon.svg" width="400" height="400">
+        <div id="col-xl-4">
+            <img src="https://burgerbaeclothing.com/wp-content/plugins/woocommerce-smart-coupons/assets/images/discount-coupon.svg" width="400" height="400" style="float: right;" >
         </div>
 
     </div><br><br>
-
+    <footer> Made with ❤️ by Rushil Goel</footer>
+    </div>
 </body>
 
 </html>
