--- a/templates/login.html
+++ b/templates/login.html
@@ -78,9 +78,9 @@ body{
           </ul>
     </div>
     <div>
-        <a href='/login'>
+        <a href='/signup'>
         <button class="btnlogin">
-            Login
+            Signup
         </button>
       </a>
     </div>
