--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,6 +4,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 <style>
+
+    *{
+        margin: auto;
+    }
+
     body {
         background-image: linear-gradient(to bottom right, black, black, rgb(12, 5, 66), #BB86FC);
         font-family: 'Poppins', sans-serif;
@@ -88,7 +93,7 @@ footer {
 <body>
     <nav class="navbar">
         <div>
-          <a href="#"><img class="imgabout image-logo" src='../static/logo.svg' width="225" height="40" alt="Logo" /></a>
+          <a href="#"><img class="imgabout image-logo" src='https://img.favpng.com/3/16/17/coupon-computer-icons-discounts-and-allowances-voucher-e-commerce-png-favpng-0WeMi3z04SmG2g9echMZe0Kxc.jpg' width="125" height="40" alt="Logo" /></a>
         </div>
         <div class="midnav">
             <ul>
@@ -115,15 +120,12 @@ footer {
     <div class="container">
     <div id="row">
         <div id="col-xl-8">
-            <p style="font-size: 72px; letter-spacing: 5px;"><b>CouponShare</b><br></p>
+            <p style="font-size: 72px; letter-spacing: 5px; text-align:center;"><b>CouponShare</b><br></p>
             <p width="25%">
                 A website for people to share the details of coupons of websites and stores that they wont be using.
                 Uses a basic point based system. Each coupon added awards +1 point and each redemption awards -1 point.
                 Keep Adding coupons to redeem and avail discounts!
             </p><br>
-        </div>
-        <div id="col-xl-4">
-            <img src="https://burgerbaeclothing.com/wp-content/plugins/woocommerce-smart-coupons/assets/images/discount-coupon.svg" width="230" height="230" style="float: right;" >
         </div>
 
     </div><br><br>
