--- a/templates/landing.html
+++ b/templates/landing.html
@@ -88,6 +88,15 @@ li {
 footer {
     text-align: center;
 }
+
+.content {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
 </style>
 
 <body>
@@ -117,14 +126,16 @@ footer {
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container content">
     <div id="row">
         <div id="col-xl-8">
             <p style="font-size: 72px; letter-spacing: 5px; text-align:center;"><b>CouponShare</b><br></p>
-            <p width="25%">
-                A website for people to share the details of coupons of websites and stores that they wont be using.
-                Uses a basic point based system. Each coupon added awards +1 point and each redemption awards -1 point.
-                Keep Adding coupons to redeem and avail discounts!
+            <p width="25%" style="text-align: justify;">
+                CouponShare is a matchmaking website for people with coupons that they would not be using and for people who wants to avail discounts by finding right coupons for themselves.
+                CouponShare Uses a basic point based system. Each coupon added awards +1 point and each redemption awards -1 point.
+                You simply need to Signup/Login and you will be awarded +1 point that can be used to unlock a coupon and will subsequently be awarded -1 points.
+                Each time you add a new valid coupon, you are awarded with +1 point.
+                Keep Adding coupons to redeem and avail heavy discounts!
             </p><br>
         </div>
 
