--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,11 +1,10 @@
 <html>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 <style>
-
-    *{
+    * {
         margin: auto;
     }
 
@@ -18,10 +17,10 @@
     }
 
     .midnav {
-    margin: 10px;
-    padding: 10px;
-    background-image: linear-gradient(white, white);
-    border-radius: 10px;
+        margin: 10px;
+        padding: 10px;
+        background-image: linear-gradient(white, white);
+        border-radius: 10px;
     }
 
     @media screen and (max-width: 500px) {
@@ -48,61 +47,65 @@
         font-size: 18px;
         color: #BB86FC;
     }
+
     #col1 {
         width: 70%;
     }
+
     #col2 {
         width: 30%;
         float: right;
     }
 
     .navbar {
-  padding-top: 25px;
-  font-family: "Quicksand", sans-serif;
-  display: flex;
-}
+        padding-top: 25px;
+        font-family: "Quicksand", sans-serif;
+        display: flex;
+    }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
 
-li {
-  display: inline;
-  padding: 40px;
-  list-style: none;
-}
+    li {
+        display: inline;
+        padding: 40px;
+        list-style: none;
+    }
 
-.btnlogin {
-  color: #f1f1f1;
-  border-style: none;
-  border-radius: 9px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #BB86FC;
-  font-family: "Quicksand", sans-serif;
-}
-footer {
-    text-align: center;
-}
+    .btnlogin {
+        color: #f1f1f1;
+        border-style: none;
+        border-radius: 9px;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        background-color: #BB86FC;
+        font-family: "Quicksand", sans-serif;
+    }
 
-.content {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
+    footer {
+        text-align: center;
+    }
 
+    .content {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
 </style>
 
 <body>
     <nav class="navbar">
         <div>
-          <a href="#"><img class="imgabout image-logo" src='https://img.favpng.com/3/16/17/coupon-computer-icons-discounts-and-allowances-voucher-e-commerce-png-favpng-0WeMi3z04SmG2g9echMZe0Kxc.jpg' width="125" height="40" alt="Logo" /></a>
+            <a href="#"><img class="imgabout image-logo"
+                    src='https://img.favpng.com/3/16/17/coupon-computer-icons-discounts-and-allowances-voucher-e-commerce-png-favpng-0WeMi3z04SmG2g9echMZe0Kxc.jpg'
+                    width="125" height="40" alt="Logo" /></a>
         </div>
         <div class="midnav">
             <ul>
@@ -115,32 +118,35 @@ footer {
                 <li>
                     <a href="/contact">Contact</a>
                 </li>
-              </ul>
+            </ul>
         </div>
         <div>
             <a href='/login'>
-            <button class="btnlogin">
-                Login
-            </button>
-          </a>
+                <button class="btnlogin">
+                    Login
+                </button>
+            </a>
         </div>
     </nav>
 
     <div class="container content">
-    <div id="row">
-        <div id="col-xl-8">
-            <p style="font-size: 72px; letter-spacing: 5px; text-align:center;"><b>CouponShare</b><br></p>
-            <p width="25%" style="text-align: justify;">
-                CouponShare is a matchmaking website for people with coupons that they would not be using and for people who wants to avail discounts by finding right coupons for themselves.
-                CouponShare Uses a basic point based system. Each coupon added awards +1 point and each redemption awards -1 point.
-                You simply need to Signup/Login and you will be awarded +1 point that can be used to unlock a coupon and will subsequently be awarded -1 points.
-                Each time you add a new valid coupon, you are awarded with +1 point.
-                Keep Adding coupons to redeem and avail heavy discounts!
-            </p><br>
-        </div>
+        <div id="row">
+            <div id="col-xl-8">
+                <p style="font-size: 72px; letter-spacing: 5px; text-align:center;"><b>CouponShare</b><br></p>
+                <p width="25%" style="text-align: justify;">
+                    CouponShare is a matchmaking website for people with coupons that they would not be using and for
+                    people who wants to avail discounts by finding right coupons for themselves.
+                    CouponShare Uses a basic point based system. Each coupon added awards +1 point and each redemption
+                    awards -1 point.
+                    You simply need to Signup/Login and you will be awarded +1 point that can be used to unlock a coupon
+                    and will subsequently be awarded -1 points.
+                    Each time you add a new valid coupon, you are awarded with +1 point.
+                    Keep Adding coupons to redeem and avail heavy discounts!
+                </p><br>
+            </div>
 
-    </div><br><br>
-    <footer> Made with ❤️ by Rushil Goel</footer>
+        </div><br><br>
+        <footer> Made with ❤️ by Rushil Goel</footer>
     </div>
 </body>
 
