--- a/templates/signup.html
+++ b/templates/signup.html
@@ -78,7 +78,9 @@
 <body>
   <nav class="navbar">
     <div>
-      <a href="#"><img class="imgabout image-logo" src='../static/logo.svg' width="225" height="40" alt="Logo" /></a>
+      <a href="#"><img class="imgabout image-logo"
+        src='https://img.favpng.com/3/16/17/coupon-computer-icons-discounts-and-allowances-voucher-e-commerce-png-favpng-0WeMi3z04SmG2g9echMZe0Kxc.jpg'
+        width="125" height="40" alt="Logo" /></a>
     </div>
     <div class="midnav">
       <ul>
