--- a/templates/index.html
+++ b/templates/index.html
@@ -2,38 +2,124 @@
 
 <head>
     <link rel="shortcut icon" type="image/jpg" href="../static/blue.jpg" />
-    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 </head>
 
+<style>
+    * {
+        margin: auto;
+    }
+
+    .navbar {
+        padding-top: 25px;
+        font-family: "Quicksand", sans-serif;
+        display: flex;
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    li {
+        display: inline;
+        padding: 40px;
+        list-style: none;
+    }
+
+    .midnav {
+        margin: 10px;
+        padding: 10px;
+        margin-right: 10px;
+        background-image: linear-gradient(white, white);
+        border-radius: 10px;
+    }
+
+    .btnlogin {
+        color: #f1f1f1;
+        border-style: none;
+        border-radius: 9px;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        background-color: #BB86FC;
+        font-family: "Quicksand", sans-serif;
+    }
+
+    body {
+        background-image: linear-gradient(to bottom right, black, black, rgb(12, 5, 66), #BB86FC);
+        color: white;
+        line-height: 1.5;
+        width: 100%;
+    }
+
+    .content {
+        background: rgba(255, 255, 255, 0.25);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        padding: 10px;
+        text-align: center;
+        width: 600px;
+    }
+</style>
+
 <body>
-    <div class="topnav">
-        <a class="active" href="/home">CouponShare</a>
-        <a href="/add">Add Coupon</a>
-        <a href="/about">About</a>
-        {% if 'email' in session %}
-        <a href="/logout">Log Out</a>
-        {% else %}
-        <a href="/login">Log in</a>
-        {% endif %}
-    </div>
-    <p style="color: aliceblue;">Hi, {{ fname }} </p>
-    <p style="color: aliceblue;"> Coupon Redemptions Remaining: {{ Coupon_Redemptions }} </p>
 
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul class=flashes>
-        {% for message in messages %}
-        <div class="message" style="color: aliceblue;">
-            {{ message }}
+    <nav class="navbar">
+        <div>
+            <a href="#"><img class="imgabout image-logo"
+                    src='https://img.favpng.com/3/16/17/coupon-computer-icons-discounts-and-allowances-voucher-e-commerce-png-favpng-0WeMi3z04SmG2g9echMZe0Kxc.jpg'
+                    width="125" height="40" alt="Logo" /></a>
         </div>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
+        <div class="midnav">
+            <ul>
+                <li>
+                    <a class="active" href="/home">Home</a>
+                </li>
+                <li>
+                    <a href="/About">About</a>
+                </li>
+                {% if 'email' not in session %}
+                <a href="/login">Log In</a>
+                {% endif %}
+                <li>
+                    <a href="/contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href='/logout'>
+                <button class="btnlogin">
+                    Logout
+                </button>
+            </a>
+        </div>
+    </nav>
 
-    <div style="color: aliceblue;">
+    <div style="text-align: center;">
+        <p>Hi, {{ fname }} </p>
+        <p>Coupon Redemptions Remaining: {{ Coupon_Redemptions }} </p>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul class=flashes style="color: red;">
+            {% for message in messages %}
+            <div class="message">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+    </div>
+
+    <div class="container">
         {% for code in codes_all %}
-        <div style="background-color: rgb(107, 106, 106);">
+        <div class="content">
             {% if code.Used == 0 %}
             Store/Company : {{ code.Store }} <br>
             Added By : {{ code.Added_By }} <br>
@@ -44,8 +130,8 @@
             {{ Categories }},
             {% endfor %}
             <br>
-            Additional Details : {{ code.Additional_Details }}<br>
-            <button> <a href="/CouponUsed">I'm Using This Coupon</a></button>
+            Additional Details : {{ code.Additional_Details }}<br><br>
+            <button> <a href="/CouponUsed">I'm Using This Coupon!</a></button>
             {% endif %}
         </div>
         <br>
