--- a/templates/about.html
+++ b/templates/about.html
@@ -82,7 +82,7 @@
                     <a class="active" href="/home">Home</a>
                 </li>
                 <li>
-                    <a href="/about">about</a>
+                    <a href="/about">About</a>
                 </li>
                 {% if 'email' not in session %}
                 <a href="/login">Log In</a>
