--- a/templates/add.html
+++ b/templates/add.html
@@ -8,7 +8,7 @@
     <div class="topnav">
         <a href="/home">CouponShare</a>
         <a class="active" href="/add">Add Coupon</a>
-        <a href="/about">about</a>
+        <a href="/about">About</a>
         {% if 'email' in session %}
             <a href="/logout">Log Out</a>
         {% else %}
