--- a/templates/landing.html
+++ b/templates/landing.html
@@ -113,7 +113,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/about">about</a>
+                    <a href="/about">About</a>
                 </li>
                 <li>
                     <a href="/contact">Contact</a>
