--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -66,6 +66,11 @@
         padding: 30px;
         text-align: justify;
         width: 600px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     }
 </style>
 
@@ -85,38 +90,19 @@
                 <li>
                     <a href="/about">About</a>
                 </li>
-                {% if 'email' not in session %}
-                <a href="/login">Log In</a>
-                {% endif %}
                 <li>
                     <a href="/contact">Contact</a>
                 </li>
             </ul>
         </div>
         <div>
-            <a href='/logout'>
+            <a href='/login'>
                 <button class="btnlogin">
-                    Logout
+                    Login
                 </button>
             </a>
         </div>
     </nav>
-
-    <div style="text-align: center;">
-        <p>Hi, {{ fname }} </p>
-        <p>Coupon Redemptions Remaining: {{ Coupon_Redemptions }} </p>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul class=flashes style="color: red;">
-            {% for message in messages %}
-            <div class="message">
-                {{ message }}
-            </div>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
-    </div>
 
     <div class="container content">
         <div style="text-align: center; font-weight: 900;">About Us</div>
