--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <!-- <link rel="shortcut icon" type="image/jpg" href="../static/blue.jpg"/> -->
+  <link rel="shortcut icon" type="image/jpg" href="../static/blue.jpg"/>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
@@ -9,7 +9,7 @@
 
 <style>
   * {
-    margin: 200px;
+    margin: auto;
   }
 
   .navbar {
@@ -88,7 +88,7 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/about">About</a>
+          <a href="/about_us">About</a>
         </li>
         <li>
           <a href="/contact">Contact</a>
