--- a/templates/login.html
+++ b/templates/login.html
@@ -58,6 +58,7 @@
     color: white;
     line-height: 1.5;
     width: 100%;
+    font-size: large;
   }
 
   .content {
@@ -88,7 +89,7 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/about">About</a>
+          <a href="/about_us">About</a>
         </li>
         <li>
           <a href="/contact">Contact</a>
